dashboar page --- leasestatus of undefined

--- a/src/app/dashboard/home/lease-tabs/lease-tabs.component.html
+++ b/src/app/dashboard/home/lease-tabs/lease-tabs.component.html
@@ -1,5 +1,6 @@
+<div *ngIf="showTabs">
 <!--Lease tabs Starts Here-->
-<div class="row " *ngIf="showTabs">
+<div class="row " >
   <div class="db-lease-tab col-12 ">
 
       <!-- Nav pills -->
@@ -447,6 +448,6 @@
   </div>
 
 </div>
-
+</div>
 <!-- ------------------ payment-help-popup ------------------- -->
 <payment-help-popup></payment-help-popup>
