--- a/src/app/dashboard/home/lease-tabs/lease-tabs.component.html
+++ b/src/app/dashboard/home/lease-tabs/lease-tabs.component.html
@@ -80,7 +80,7 @@
                                                           <li>
                                                               <label>Serial number:</label>
                                                               <br>
-                                                              <span class="">{{item['leaseNo']}}</span>
+                                                              <span class=""></span>
                                                           </li>
                                                           <li>
                                                               <label>Equipment Status:</label>
