new changes made

--- a/src/app/dashboard/home/lease-detail/lease-detail.component.html
+++ b/src/app/dashboard/home/lease-detail/lease-detail.component.html
@@ -3,7 +3,7 @@
       <ul>
           <li>
               <label>Merchant Name:</label>
-              <span class="">{{leaseData["merchnatName"]}}</span>
+              <span class="">{{leaseData["merchantName"]}}</span>
           </li>
           <li>
               <label>
@@ -26,11 +26,11 @@
           <li>
               <label>
                   Business Contact:</label>
-              <span class=""> {{selectedLease['businessContact']}}</span>
+              <span class=""> {{selectedLease['businessPhone']}}</span>
           </li>
           <li>
               <label>Email:</label>
-              <span class="">{{selectedLease['emailId']}}</span>
+              <span class="">{{selectedLease['email']}}</span>
           </li>
       </ul>
   </div>
