--- a/src/app/dashboard/home/lease-tabs/lease-tabs.component.html
+++ b/src/app/dashboard/home/lease-tabs/lease-tabs.component.html
@@ -70,7 +70,7 @@
                                                           <li>
                                                               <label>Equipment:</label>
                                                               <br>
-                                                              <span class="">Clover Station</span>
+                                                              <span class="">{{item['equipment']}}</span>
                                                           </li>
                                                           <li>
                                                               <label>Make and Model:</label>
@@ -80,12 +80,12 @@
                                                           <li>
                                                               <label>Serial number:</label>
                                                               <br>
-                                                              <span class=""></span>
+                                                              <span class="">{{item['serialNumber']}}</span>
                                                           </li>
                                                           <li>
                                                               <label>Equipment Status:</label>
                                                               <br>
-                                                              <span class="">Returned</span>
+                                                              <span class="">{{item['equipmentStatus']}}</span>
                                                           </li>
                                                       </ul>
 
