--- a/src/app/auth/sign-up/signup-main/signup-main.component.html
+++ b/src/app/auth/sign-up/signup-main/signup-main.component.html
@@ -1,13 +1,13 @@
 <div id="signWrap" class="container-fluid">
   <div class="row">
-    <div class="col-sm-12 col-md-12 col-lg-5  offset-lg-1  ">
+    <div class="col-sm-12  col-md-6 col-lg-6     ">
       <app-signup-form></app-signup-form>
     </div>
-    <div class="col-sm-12  col-md-12 col-lg-5 d-md-block d-none    ">
+    <div class="col-sm-12   col-md-6 col-lg-5        ">
       <app-signup-stat></app-signup-stat>
     </div>
 
   </div>
 </div>
 
-<!--h-->
+
