--- a/src/app/dashboard/breadcrumb/breadcrumb.component.html
+++ b/src/app/dashboard/breadcrumb/breadcrumb.component.html
@@ -1,4 +1,4 @@
-<div class="row db-bread-wrap pt-3">
+<div class="row db-bread-wrap">
   <ol class="breadcrumb  w-100">
       <li class="breadcrumb-item"><a href="#">urLease</a></li>
       <li class="breadcrumb-item"><a href="#">Dashboard</a></li>
