--- a/src/app/dashboard/contact/contact.component.html
+++ b/src/app/dashboard/contact/contact.component.html
@@ -1,24 +1,20 @@
-<div class="row">
-  <div class="col-12 db-inner-wrap  ">
-      <!--breadcrums Starts Here-->
-      <div class="row db-bread-wrap pt-3">
-          <ol class="breadcrumb  w-100">
-              <li class="breadcrumb-item"><a href="#">urLease</a></li>
-              <li class="breadcrumb-item"><a href="#">Dashboard</a></li>
-              <li class="breadcrumb-item active">Equipment</li>
-          </ol>
+<div class="col-12 db-inner-wrap  ">
+  <!--breadcrums Starts Here-->
+  <div class="row db-bread-wrap">
+    <ol class="breadcrumb  w-100">
+      <li class="breadcrumb-item"><a href="#">urLease</a></li>
+      <li class="breadcrumb-item"><a href="#">Dashboard</a></li>
+      <li class="breadcrumb-item active">Equipment</li>
+    </ol>
 
-      </div>
-      <!--wraper for FAQ-->
-      <div class="row ">
-          <div class="db-inner-box col-12 ">
+  </div>
+  <!--wraper for FAQ-->
+  <div class="db-inner-box col-12 ">
 
-              <h1>Contact</h1>
-          </div>
-      </div>
-
-
+    <h1>Contact</h1>
   </div>
 
 
 </div>
+
+
