--- a/src/app/dashboard/eol/eol.component.html
+++ b/src/app/dashboard/eol/eol.component.html
@@ -1,97 +1,113 @@
-<div class="row">
-  <div class="col-12 db-inner-wrap  ">
-      <!--breadcrums Starts Here-->
-      <div class="row db-bread-wrap pt-3">
-          <ol class="breadcrumb  w-100">
-              <li class="breadcrumb-item"><a href="#">urLease</a></li>
-              <li class="breadcrumb-item"><a href="#">Dashboard</a></li>
-              <li class="breadcrumb-item active">EOL</li>
-          </ol>
+<div class="col-12 db-inner-wrap  ">
+  <!--breadcrums Starts Here-->
+  <div class="row db-bread-wrap">
+    <ol class="breadcrumb  w-100">
+      <li class="breadcrumb-item"><a href="#">urLease</a></li>
+      <li class="breadcrumb-item"><a href="#">Dashboard</a></li>
+      <li class="breadcrumb-item active">EOL</li>
+    </ol>
 
-      </div>
-      <!--wraper for FAQ-->
-      <div class="row ">
-          <div class="db-inner-box col-12 eol ">
-              <div class="row">
-                  <div id="accordion">
-                      <div class="card">
-                          <div class="card-header" id="headingOne">
-                              <h5 class="mb-0">
-                                  <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne"
-                                          aria-expanded="true" aria-controls="collapseOne">
-                                      Return Equipment
-                                  </button>
-                              </h5>
-                          </div>
+  </div>
+  <!--wraper for FAQ-->
+  <div class="db-inner-box col-12 eol ">
+    <div class="faqWrap">End of Lease Options</div>
 
-                          <div id="collapseOne" class="collapse show" aria-labelledby="headingOne"
-                               data-parent="#accordion">
-                              <div class="card-body">
-                                  Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                                  Ipsum has been the industry's standard dummy text ever since the 1500s, when an
-                                  unknown printer took a galley of type and scrambled it to make a type specimen
-                                  book. It has survived not only five. Lorem Ipsum is simply dummy text of the
-                                  printing and typesetting industry. Lorem Ipsum has been the industry's standard
-                                  dummy text ever since the 1500s, when an unknown printer took a galley of type
-                                  and scrambled it to make a type specimen book. It has survived not only five.
-                              </div>
-                          </div>
-                      </div>
-                      <div class="card">
-                          <div class="card-header" id="headingTwo">
-                              <h5 class="mb-0">
-                                  <button class="btn btn-link collapsed" data-toggle="collapse"
-                                          data-target="#collapseTwo" aria-expanded="false"
-                                          aria-controls="collapseTwo">
-                                      Purchase Equipment
-                                  </button>
-                              </h5>
-                          </div>
-                          <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
-                               data-parent="#accordion">
-                              <div class="card-body">
-                                  Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                                  Ipsum has been the industry's standard dummy text ever since the 1500s, when an
-                                  unknown printer took a galley of type and scrambled it to make a type specimen
-                                  book. It has survived not only five. Lorem Ipsum is simply dummy text of the
-                                  printing and typesetting industry. Lorem Ipsum has been the industry's standard
-                                  dummy text ever since the 1500s, when an unknown printer took a galley of type
-                                  and scrambled it to make a type specimen book. It has survived not only five.
-                              </div>
-                          </div>
-                      </div>
-                      <div class="card">
-                          <div class="card-header" id="headingThree">
-                              <h5 class="mb-0">
-                                  <button class="btn btn-link collapsed" data-toggle="collapse"
-                                          data-target="#collapseThree" aria-expanded="false"
-                                          aria-controls="collapseThree">
-                                      Month to Month
-                                  </button>
-                              </h5>
-                          </div>
-                          <div id="collapseThree" class="collapse" aria-labelledby="headingThree"
-                               data-parent="#accordion">
-                              <div class="card-body">Lorem Ipsum is simply dummy text of the printing and
-                                  typesetting industry. Lorem Ipsum has been the industry's standard dummy text
-                                  ever since the 1500s, when an unknown printer took a galley of type and
-                                  scrambled it to make a type specimen book. It has survived not only five. Lorem
-                                  Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
-                                  has been the industry's standard dummy text ever since the 1500s, when an
-                                  unknown printer took a galley of type and scrambled it to make a type specimen
-                                  book. It has survived not only five.
-                              </div>
-                          </div>
-                      </div>
-                  </div>
-              </div>
+    <div class="row">
+      <div id="accordion" class="faq-wrap">
+        <!--FAQ 01 STARTS-->
+        <div class="card">
+          <div class="card-header" id="faq-q-01">
 
-
+            <!--question starts-->
+            <h5 class="mb-0">
+              <a class="marker  " data-toggle="collapse" data-target="#faq-a-01"
+                 aria-expanded="true" aria-controls="collapseOne">
+                Return Equipment </a>
+            </h5>
           </div>
+
+          <div id="faq-a-01" class="collapse show " aria-labelledby="faq-q-01"
+               data-parent="#accordion">
+            <div class="card-body">
+
+              <!--Anzwer starts-->
+              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+                scrambled it to make a type specimen book. It has survived not only five. Lorem Ipsum is simply dummy
+                text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text
+                ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
+                specimen book. It has survived not only five.</p>
+
+
+            </div>
+          </div>
+        </div>
+        <!--FAQ 02 STARTS-->
+        <div class="card">
+          <div class="card-header" id="faq-q-02">
+
+            <!--question starts-->
+            <h5 class="mb-0">
+              <a class="marker collapsed " data-toggle="collapse" data-target="#faq-a-02"
+                 aria-expanded="true" aria-controls="">
+                Purchase Equipment</a>
+            </h5>
+          </div>
+
+          <div id="faq-a-02" class="collapse " aria-labelledby="faq-q-02"
+               data-parent="#accordion">
+            <div class="card-body">
+
+              <!--Anzwer starts-->
+              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+                scrambled it to make a type specimen book. It has survived not only five. Lorem Ipsum is simply dummy
+                text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text
+                ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
+                specimen book. It has survived not only five.</p>
+
+
+            </div>
+          </div>
+        </div>
+        <!--FAQ 03 STARTS-->
+        <div class="card">
+          <div class="card-header" id="faq-q-03">
+
+            <!--question starts-->
+            <h5 class="mb-0">
+              <a class="marker collapsed " data-toggle="collapse" data-target="#faq-a-03"
+                 aria-expanded="true" aria-controls="">
+                Month to Month</a>
+            </h5>
+          </div>
+
+          <div id="faq-a-03" class="collapse " aria-labelledby="faq-q-03"
+               data-parent="#accordion">
+            <div class="card-body">
+
+              <!--Anzwer starts-->
+              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+                scrambled it to make a type specimen book. It has survived not only five. Lorem Ipsum is simply dummy
+                text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text
+                ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
+                specimen book. It has survived not only five.</p>
+
+
+            </div>
+          </div>
+        </div>
+
+
       </div>
+    </div>
 
 
   </div>
 
 
 </div>
+
+
+
