--- a/src/app/thank/thank.component.html
+++ b/src/app/thank/thank.component.html
@@ -1,8 +1,10 @@
 <div id="signWrap" class="container-fluid">
   <div class="row">
     <div class="col-sm-12 success-wrap th-outer-wrap  ">
-      <h1 id="brandLogo" class="text-center"><img src="./assets/img/firstdata_logo.svg"></h1>
+      <h1 id="brandLogo" class="text-center"><img src="/assets/img/firstdata_logo.svg"></h1>
+      <h1 class="text-center th-logowrap"><img src="/assets/img/TickIcon.svg"></h1>
       <h1 class="text-center th-logowrap"><img src="./assets/img/TickIcon.svg"></h1>
+
       <h1 class="text-center th-head ">Thank you</h1>
       <p class="text-center th-txt">Please check your email for instructions on resetting your password.</p>
       <h6 class="text-center th-txt-sm">
