new changes made today

--- a/src/app/dashboard/home/lease-detail/lease-detail.component.html
+++ b/src/app/dashboard/home/lease-detail/lease-detail.component.html
@@ -21,16 +21,16 @@
       <ul>
           <li>
               <label>Business Address: </label>
-              <span class="">{{selectedLease['businessAddress']}}</span>
+              <span class="">{{leaseData['businessAddress']}}</span>
           </li>
           <li>
               <label>
                   Business Contact:</label>
-              <span class=""> {{selectedLease['businessPhone']}}</span>
+              <span class=""> {{leaseData['businessPhone']}}</span>
           </li>
           <li>
               <label>Email:</label>
-              <span class="">{{selectedLease['email']}}</span>
+              <span class="">{{leaseData['email']}}</span>
           </li>
       </ul>
   </div>
