--- a/src/app/auth-temp/change-temp-pass/change-temp-pass.component.html
+++ b/src/app/auth-temp/change-temp-pass/change-temp-pass.component.html
@@ -57,23 +57,23 @@
                           <p>Password must meet the following requirements:</p>
                           <ul>
                             <li>
-                              <span *ngIf="!upperAndLowerCase">&#10007;</span>
-                              <span *ngIf="upperAndLowerCase">&#10003;</span>
+                              <span *ngIf="!upperAndLowerCase"><img src="./assets/img/ic_close.png"></span>
+                              <span *ngIf="upperAndLowerCase"><img src="./assets/img/ic_tick.png"></span>
                               Contains upper and lower case
                             </li>
                             <li>
-                              <span *ngIf="!number">&#10007;</span>
-                              <span *ngIf="number">&#10003;</span>
+                              <span *ngIf="!number"><img src="./assets/img/ic_close.png"></span>
+                              <span *ngIf="number"><img src="./assets/img/ic_tick.png"></span>
                               At least one number
                             </li>
                             <li>
-                              <span *ngIf="!splChar">&#10007;</span>
-                              <span *ngIf="splChar">&#10003;</span>
+                              <span *ngIf="!splChar"><img src="./assets/img/ic_close.png"></span>
+                              <span *ngIf="splChar"><img src="./assets/img/ic_tick.png"></span>
                               At least one special character
                             </li>
                             <li>
-                              <span *ngIf="!eightChar">&#10007;</span>
-                              <span *ngIf="eightChar">&#10003;</span>
+                              <span *ngIf="!eightChar"><img src="./assets/img/ic_close.png"></span>
+                              <span *ngIf="eightChar"><img src="./assets/img/ic_tick.png"></span>
                               Be at least 8 characters
                             </li>
                           </ul>
@@ -99,7 +99,7 @@
                       #confPassword="ngModel"
                       #cPass
                       >
-                    
+
                     <div *ngIf="validationError.confirmPasswordError">
                       <div class="fd-error"  (click)="validationError.confirmPasswordError = false" *ngIf="validationError.confirmPasswordError">Passwords do not match</div>
                     </div>
