--- a/src/app/auth/new/signchangepass/signchangepass.component.html
+++ b/src/app/auth/new/signchangepass/signchangepass.component.html
@@ -15,30 +15,32 @@
             <div class="tab-pane fade show active" id="signup" role="tabpanel" aria-labelledby="signup-tab">
               <p class="loginDesc">Please complete all fields below</p>
 
-<!--ee-->
+              <!--ee-->
 
               <form #changePass="ngForm" (submit)="changePassword(changePass)">
                 <div class="form-group">
                   <input
-                   type="password"
+                    type="password"
                     class="form-control"
-                      placeholder="Re-Enter Temporary Password"
-                      name="tempPass"
-                      ngModel
-                     required
-                      #tempPass="ngModel"
-                      #tmpPass
-                      pattern="Photon123"
-                       >
+                    placeholder="Re-Enter Temporary Password"
+                    name="tempPass"
+                    ngModel
+                    required
+                    #tempPass="ngModel"
+                    #tmpPass
+                    pattern="Photon123"
+                  >
                   <div *ngIf="!tempPass.valid">
-                       <div class="fd-error" (click)="validationError.tempPasswordError = false" *ngIf="validationError.tempPasswordError">Incorrect temporary password</div>
+                    <div class="fd-error" (click)="validationError.tempPasswordError = false"
+                         *ngIf="validationError.tempPasswordError">Incorrect temporary password
                     </div>
+                  </div>
 
                 </div>
                 <div class="form-group">
                   <input
-                  type="password"
-                   class="form-control "
+                    type="password"
+                    class="form-control "
                     placeholder="Enter New Password"
                     name="passwordNew"
                     ngModel
@@ -47,75 +49,82 @@
                     minlength="8"
                     (blur)="showError = false" (focus)="validate($event)"
                     [formControl]="passwordFC"
-                    >
+                  >
 
 
-                    <div class="toolWrap " *ngIf="showError">
-                        <div class="toolInnerWrap">
-                          <div class="toolArrow"></div>
+                  <div class="toolWrap " *ngIf="showError">
+                    <div class="toolInnerWrap">
+                      <div class="toolArrow"></div>
 
-                          <p>Password must meet the following requirements:</p>
-                          <ul>
-                            <li>
-                              <span *ngIf="!upperAndLowerCase">&#10007;</span>
-                              <span *ngIf="upperAndLowerCase">&#10003;</span>
-                              Contains upper and lower case
-                            </li>
-                            <li>
-                              <span *ngIf="!number">&#10007;</span>
-                              <span *ngIf="number">&#10003;</span>
-                              At least one number
-                            </li>
-                            <li>
-                              <span *ngIf="!splChar">&#10007;</span>
-                              <span *ngIf="splChar">&#10003;</span>
-                              At least one special character
-                            </li>
-                            <li>
-                              <span *ngIf="!eightChar">&#10007;</span>
-                              <span *ngIf="eightChar">&#10003;</span>
-                              Be at least 8 characters
-                            </li>
-                          </ul>
-
-                        </div>
-                      </div>
+                      <p>Password must meet the following requirements:</p>
+                      <ul>
+                        <li>
+                          <span *ngIf="!upperAndLowerCase"><img src="./assets/img/ic_close.png">
+</span>
+                          <span *ngIf="upperAndLowerCase"><img src="./assets/img/ic_tick.png"></span>
 
 
-                    <div *ngIf="validationError.newPasswordError">
-                    <div class="fd-error" (click)="validationError.newPasswordError = false" *ngIf="validationError.newPasswordError">Incorrect password format</div>
+                          Contains upper and lower case
+                        </li>
+                        <li>
+                          <span *ngIf="!number"><img src="./assets/img/ic_close.png"></span>
+                          <span *ngIf="number"><img src="./assets/img/ic_tick.png"></span>
+                          At least one number
+                        </li>
+                        <li>
+                          <span *ngIf="!splChar"><img src="./assets/img/ic_close.png"></span>
+                          <span *ngIf="splChar"><img src="./assets/img/ic_tick.png"></span>
+                          At least one special character
+                        </li>
+                        <li>
+                          <span *ngIf="!eightChar"><img src="./assets/img/ic_close.png"></span>
+                          <span *ngIf="eightChar"><img src="./assets/img/ic_tick.png"></span>
+                          Be at least 8 characters
+                        </li>
+                      </ul>
+
+                    </div>
+                  </div>
+
+
+                  <div *ngIf="validationError.newPasswordError">
+                    <div class="fd-error" (click)="validationError.newPasswordError = false"
+                         *ngIf="validationError.newPasswordError">Incorrect password format
+                    </div>
                   </div>
                 </div>
 
                 <div class="form-group">
-                    <input
-                     type="password"
-                      class="form-control "
-                      placeholder="Confirm Your Password"
-                      name="confPassword"
-                      ngModel
-                      required
-                      validateEqual="passwordNew"
-                      #confPassword="ngModel"
-                      #cPass
-                      >
-                    
-                    <div *ngIf="validationError.confirmPasswordError">
-                      <div class="fd-error"  (click)="validationError.confirmPasswordError = false" *ngIf="validationError.confirmPasswordError">Passwords do not match</div>
+                  <input
+                    type="password"
+                    class="form-control "
+                    placeholder="Confirm Your Password"
+                    name="confPassword"
+                    ngModel
+                    required
+                    validateEqual="passwordNew"
+                    #confPassword="ngModel"
+                    #cPass
+                  >
+
+                  <div *ngIf="validationError.confirmPasswordError">
+                    <div class="fd-error" (click)="validationError.confirmPasswordError = false"
+                         *ngIf="validationError.confirmPasswordError">Passwords do not match
                     </div>
-
-
                   </div>
+
+
+                </div>
                 <div class="form-group">
                   <re-captcha
-                  #captchaRef
-                  name="captcha"
-                  required
-                  ngModel></re-captcha>
+                    #captchaRef
+                    name="captcha"
+                    required
+                    ngModel></re-captcha>
                 </div>
                 <button type="submit"
                         class="btnSubmit btn btn-primary btn-lg btn-block"
-                        >Submit
+                >Submit
                 </button>
 
 
